--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,8 @@
     "Webnative.webnative",
     "Webnative.webnative",
     "Webnative.webnative",
+    "Webnative.webnative",
+    "Webnative.webnative",
     "Webnative.webnative"
   ]
 }
