--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   # Development environment (Alpine-based)
   ionic-dev:
@@ -11,6 +13,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    env_file:
+      - .env
     environment:
       - NODE_ENV=development
       - VITE_DEV_SERVER_HOST=0.0.0.0
@@ -31,6 +35,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    env_file:
+      - .env
     environment:
       - NODE_ENV=development
       - VITE_DEV_SERVER_HOST=0.0.0.0
@@ -48,6 +54,8 @@ services:
     container_name: ionic-govt-billing-prod
     ports:
       - "80:80"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
     profiles:
@@ -63,6 +71,8 @@ services:
     container_name: ionic-govt-billing-prod-full
     ports:
       - "80:80"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
     profiles:
