--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -12,7 +12,7 @@
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
 # Set Java home to Android Studio's bundled JDK (Java 21)
-org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+# org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
