--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4",
-    "react-signature-canvas": "^1.1.0-alpha.2"
+    "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.0.0",
@@ -48,7 +47,6 @@
     "@types/html2canvas": "^0.5.35",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/react-signature-canvas": "^1.0.7",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
